; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_submodule--helper.c_module_name.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_submodule--helper.c_module_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.submodule = type { i8* }

@.str = private unnamed_addr constant [34 x i8] c"git submodule--helper name <path>\00", align 1
@the_repository = common dso_local global i32 0, align 4
@null_oid = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [56 x i8] c"no submodule mapping found in .gitmodules for path '%s'\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8**, i8*)* @module_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @module_name(i32 %0, i8** %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.submodule*, align 8
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 2
  br i1 %9, label %10, label %13

10:                                               ; preds = %3
  %11 = call i32 @_(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  %12 = call i32 @usage(i32 %11)
  br label %13

13:                                               ; preds = %10, %3
  %14 = load i32, i32* @the_repository, align 4
  %15 = load i8**, i8*** %5, align 8
  %16 = getelementptr inbounds i8*, i8** %15, i64 1
  %17 = load i8*, i8** %16, align 8
  %18 = call %struct.submodule* @submodule_from_path(i32 %14, i32* @null_oid, i8* %17)
  store %struct.submodule* %18, %struct.submodule** %7, align 8
  %19 = load %struct.submodule*, %struct.submodule** %7, align 8
  %20 = icmp ne %struct.submodule* %19, null
  br i1 %20, label %27, label %21

21:                                               ; preds = %13
  %22 = call i32 @_(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.1, i64 0, i64 0))
  %23 = load i8**, i8*** %5, align 8
  %24 = getelementptr inbounds i8*, i8** %23, i64 1
  %25 = load i8*, i8** %24, align 8
  %26 = call i32 @die(i32 %22, i8* %25)
  br label %27

27:                                               ; preds = %21, %13
  %28 = load %struct.submodule*, %struct.submodule** %7, align 8
  %29 = getelementptr inbounds %struct.submodule, %struct.submodule* %28, i32 0, i32 0
  %30 = load i8*, i8** %29, align 8
  %31 = call i32 @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i8* %30)
  ret i32 0
}

declare dso_local i32 @usage(i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local %struct.submodule* @submodule_from_path(i32, i32*, i8*) #1

declare dso_local i32 @die(i32, i8*) #1

declare dso_local i32 @printf(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
